# friday

./: .cache  .env  .gitignore  main.py  pyproject.toml  testing.py
config/: audio_config.yaml  brain_config.yaml  config.yaml  email_config.yaml
src/: audio_input.py  audio_output.py  hand_tracker.py  llm_engine.py  memory_manager.py  memory_store.py  memory_supervisor.py
tests/: diagnose_api.py  test_complex_memory.py  test_memory_manager.py  test_tts_flow.py
utils/: helpers.py
utils/tools/: email_tool.py  entertainment.py  laptop_control.py  music_tool.py  os_tools.py  tools.py
