[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "Edith"
version = "0.1.0"
description = "Personal assistant for the visually impaired, leveraging multimodal capabilities to provide a seamless and intuitive user experience."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.3.5",
    "datasets>=4.4.1",
    "faster-whisper>=1.2.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.8",
    "langchain-ollama>=0.3.10",
    "langgraph>=1.0.1",
    "numpy>=2.3.5",
    "piper-tts>=1.3.0",
    "protobuf<=4.25.3",
    "pyaudio>=0.2.14",
    "pydantic[email]>=2.12.5",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "sentence-transformers>=5.1.2",
    "setuptools<80",
    "soundfile>=0.13.1",
    "spotipy>=2.25.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
]

[tool.setuptools.packages.find]
where = ["."]

[[tool.uv.index]]
name='pytorch-cu124'
url="https://download.pytorch.org/whl/cu124"
explicit=true

[tool.uv.sources]
torch={ index='pytorch-cu124' }
torchaudio={ index='pytorch-cu124' }
